--- a/src/app/components/tables/tab-domain/tab-domain.component.html
+++ b/src/app/components/tables/tab-domain/tab-domain.component.html
@@ -16,6 +16,16 @@
   </div>
   <div class="block w-full overflow-x-auto">
 
+
+  <div class="rounded-t mb-0 px-4 py-3 border-0">
+    <div class="flex flex-wrap items-center text-right">
+      <div class="relative w-full px-4 max-w-full flex-grow flex-1">
+          <button type="button" data-modal-toggle="authentication-modal" type="button" (click)="toggleModal()">
+          Add
+        </button>
+      </div>
+    </div>
+  </div>
     <!-- Repeat this for the number of data we wish to diplay on table -->
     <table class="items-center w-full bg-transparent border-collapse table-auto">
       <thead>
@@ -28,7 +38,7 @@
                 : 'bg-red-800 text-red-300 border-red-700'
             "
           >
-            Project
+            Id
           </th>
           <th
             class="px-6 align-middle border border-solid py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left"
@@ -37,45 +47,59 @@
                 ? 'bg-blueGray-50 text-blueGray-500 border-blueGray-100'
                 : 'bg-red-800 text-red-300 border-red-700'
             ">
+            Domain Name
         </th>
+        <th
+        class="px-6 align-middle border border-solid py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left"
+        [ngClass]="
+          color === 'light'
+            ? 'bg-blueGray-50 text-blueGray-500 border-blueGray-100'
+            : 'bg-red-800 text-red-300 border-red-700'
+        ">
+        Created At
+    </th>
+      <th
+        class="px-6 align-middle border border-solid py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left"
+        [ngClass]="
+          color === 'light'
+            ? 'bg-blueGray-50 text-blueGray-500 border-blueGray-100'
+            : 'bg-red-800 text-red-300 border-red-700'
+        ">
+        Updated At
+    </th>
         </tr>
       </thead>
 
  <!-- Repeat this for the number of data we wish to diplay on table and the number of rows-->
       <tbody>
-        <tr>
+        <tr *ngFor="let domain of domains">
           <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
-            $2,500 USD
+            {{ domain.id }}
           </td>
           <td
-          id="dropdownDefault" data-dropdown-toggle="dropdown" class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
-          <button><i class="fas fa-ellipsis-v"  (click)="toggledrop1(5)"></i></button>
-          <div *ngIf="showdrop5" class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
-            <div class="py-1" role="none">
-              <!-- repeat this for all faculties -->
-              <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">edit</a>
-              <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">delete</a>
-              <!--*******************************-->
-            </div>
-          </div>
+            {{ domain.domainName }}
           </td>
+          <td
+          class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+        >
+          {{ domain.created_at }}
+        </td>
+        <td
+          class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+        >
+          {{ domain.updated_at }}
+        </td>
+
         </tr>
       </tbody>
     </table>
   </div>
 
-  <div class="rounded-t mb-0 px-4 py-3 border-0">
-    <div class="flex flex-wrap items-center text-right">
-      <div class="relative w-full px-4 max-w-full flex-grow flex-1">
-         <button type="button" data-modal-toggle="authentication-modal" type="button" (click)="toggleModal()">
-          Add
-        </button>
-      </div>
-    </div>
-  </div>
+
 </div>
 
 <div *ngIf="showModal" class="py-12 px-12 bg-gray-700 transition duration-150 ease-in-out z-10 absolute top-0 right-0 bottom-0 left-0">
@@ -94,7 +118,7 @@
         </button>
       </div>
       <!--body-->
-      <form action="">
+      <form action="" >
       <div class="relative p-5 flex-wrap">
         <label for="name" class="text-gray-800 text-sm font-bold leading-tight tracking-normal">Name :</label>
         <input id="name" class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border" placeholder="Medecin" required/>
